# vnctp-auto-build

./: CMakeLists.txt  README.md  README_EN.md  build.bat
demo/: __init__.py  get_api_version.py  vnctp_demo.py  vnctpmd.pyd  vnctpmd.pyi  vnctptd.pyd  vnctptd.pyi
src/vnctpmd/: vnctpmd.cpp
